--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div class="navDiv"><div id="btn2">Contato</div></div>
             <div id="comoFunciona">Este site destina-se apenas a mostrar conhecimentos de programação, não sendo uma recomendação de qualquer tipo de jogo.</div>
             <div id="contato">
-                <a href="https://github.com/fernandorosseto"><img src="/img/icons8-github-32.png" alt="github" srcset=""></a>
-                <a href="https://www.linkedin.com/in/fernando-rosseto-a3189520a/"><img src="/img/icons8-linkedin-32.png" alt="linkedin" srcset=""></a>
+                <a href="https://github.com/fernandorosseto"><img src="./img/icons8-github-32.png" alt="github" srcset=""></a>
+                <a href="https://www.linkedin.com/in/fernando-rosseto-a3189520a/"><img src="./img/icons8-linkedin-32.png" alt="linkedin" srcset=""></a>
 
             </div>
         </nav>
