--- a/index.html
+++ b/index.html
@@ -11,29 +11,26 @@
 </head>
 <body>
     <header>
-        <div class="logo">f{R}</div>
-        <nav>
-            <div class="navDiv"><div id="btn1">Como funciona</div></div>
-            <div class="navDiv"><div id="btn2">Contato</div></div>
-            <div id="comoFunciona">Este site destina-se apenas a mostrar conhecimentos de programação, não sendo uma recomendação de qualquer tipo de jogo.</div>
-            <div id="contato">
-                <a href="https://github.com/fernandorosseto"><img src="./img/icons8-github-32.png" alt="github" srcset=""></a>
-                <a href="https://www.linkedin.com/in/fernando-rosseto-a3189520a/"><img src="./img/icons8-linkedin-32.png" alt="linkedin" srcset=""></a>
-
-            </div>
-        </nav>
+        <div id="title"><h1>Minha mega sena</h1></div>
     </header>
-    <main class="container">
-        <h2 id="titulo">Minha Mega Sena</h2>
-        <div class="resultado">
-            <div id="n1" class="numero"></div>
-            <div id="n2" class="numero"></div>
-            <div id="n3" class="numero"></div>
-            <div id="n4" class="numero"></div>
-            <div id="n5" class="numero"></div>
-            <div id="n6" class="numero"></div>
+    <main>
+        <div class="results">
+            <div id="n1" class="number"></div>
+            <div id="n2" class="number"></div>
+            <div id="n3" class="number"></div>
+            <div id="n4" class="number"></div>
+            <div id="n5" class="number"></div>
+            <div id="n6" class="number"></div>
+        </div>
+        <div id="btn-container">
+            <button id="refresh" class="btn">Novo jogo</button>
+            <button id="copyGame" class="btn">Copiar Jogo</button>
         </div>
     </main>
-    
+    <footer>
+        <div class="info">
+            <p>&copy; 2023 Desenvolvido por <a id="myGit" href="https://github.com/fernandorosseto" target="_blank" rel="noopener noreferrer">Fernando Rosseto.</a><br>Todos os direitos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
