--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     </header>
     <main>
         <div class="results">
-            <div id="n1" class="number"></div>
-            <div id="n2" class="number"></div>
-            <div id="n3" class="number"></div>
-            <div id="n4" class="number"></div>
-            <div id="n5" class="number"></div>
-            <div id="n6" class="number"></div>
+            <div id="n1" class="number">-</div>
+            <div id="n2" class="number">-</div>
+            <div id="n3" class="number">-</div>
+            <div id="n4" class="number">-</div>
+            <div id="n5" class="number">-</div>
+            <div id="n6" class="number">-</div>
         </div>
         <div id="btn-container">
             <button id="refresh" class="btn">Novo jogo</button>
